change usm_api_url attribute in usm.ini template

--- a/templates/usm.ini.j2
+++ b/templates/usm.ini.j2
@@ -3,7 +3,7 @@ usm_log_level = DEBUG
 usm_username = admin
 usm_password = {{ hostvars[groups['usm_server'][0]]['admin_password'].stdout }}
 usm_web_url = http://{{ groups['usm_server'][0] }}
-usm_api_url = http://{{ groups['usm_server'][0] }}:9292/1.0/
+usm_api_url = http://{{ groups['usm_server'][0] }}/api/1.0/
 etcd_api_url = http://{{ groups['usm_server'][0] }}:2379/v2/
 usm_ca_cert = conf/ooo_ca.crt
 usm_brick_path = /bricks/fs_gluster01/brick
